--- a/serverless.yaml
+++ b/serverless.yaml
@@ -15,4 +15,4 @@ myNextApplication:
     memory: 512
     # architecture: arm64
     # cloudfront:
-    #   distributionId: E348Y8D322Z06H
+    #   distributionId: E348Y8D322Z06I
