--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-foo-jp",
+  "name": "tech-ac",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -19,13 +19,16 @@
     "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.3.0",
     "@reduxjs/toolkit": "^1.7.1",
+    "date-fns": "^2.28.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "next": "12.0.8",
     "nodemailer": "^6.7.2",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.24.0",
+    "react-hook-form": "^7.25.0",
     "react-markdown": "^8.0.0",
     "react-redux": "^7.2.6",
     "react-syntax-highlighter": "^15.4.5",
@@ -34,6 +37,9 @@
     "swr": "^1.1.2"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
+    "@types/lodash.debounce": "^4.0.6",
+    "@types/lodash.throttle": "^4.1.6",
     "@types/next": "^9.0.0",
     "@types/node": "^16.11.20",
     "@types/nodemailer": "^6.4.4",
