--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@aws-sdk/lib-dynamodb": "^3.47.0",
     "@aws-sdk/util-dynamodb": "^3.47.0",
     "@emotion/babel-plugin": "^11.7.2",
+    "@emotion/cache": "^11.7.1",
     "@emotion/react": "^11.7.1",
+    "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
