--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,8 @@
         "public/*"
       ]
     },
-    "incremental": true
+    "incremental": true,
+    "jsxImportSource": "@emotion/react"
   },
   "include": [
     "next-env.d.ts",
